[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/itens/FriedPotatoes.gd" type="Script" id=1]
[ext_resource path="res://sprites/batataSprite.png" type="Texture" id=2]
[ext_resource path="res://sounds/item ruim (1).ogg" type="AudioStream" id=3]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50.5, 49 )

[node name="FriedPotatoes" type="Area2D"]
position = Vector2( 215, 93 )
script = ExtResource( 1 )

[node name="FriedPotatoesSprite" type="Sprite" parent="."]
position = Vector2( -44.6, -43.6 )
scale = Vector2( 0.803333, 0.803333 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -45.5, -45 )
shape = SubResource( 1 )

[node name="CollectedSoundBad" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1, 5 )
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_FriedPotatoes_body_entered"]
